@@ -37,6 +37,9 @@ Attributes
   use; must be specified as an array. Used in the maven LWRP.
 * `node['maven']['setup_bin']` Whether or not to put mvn on your
  system path, defaults to false
+* `node['maven']['mavenrc']['opts']` Value of `MAVEN_OPTS` environment variable 
+ exported via `/etc/mavenrc` template, 
+ defaults to `-Dmaven.repo.local=$HOME/.m2/repository -Xmx384m -XX:MaxPermSize=192m`
 
 Recipes
 =======
